src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Emp_Image__c</fullName>
        <formula>IMAGE(&apos;/resource/ep&apos;+ Name , &apos;No Photo&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Hours__c</fullName>
        <label>Number of Project Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date of Rank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All_Employees</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>